Update OpenFDA DTOs and improve API key check
Added `@JsonIgnoreProperties(ignoreUnknown = true)` to all OpenFDA DTOs to ignore potential unknown fields in the responses. Refactored the API key checks in `OpenCDXApiFDAImpl` to also verify if the key is not empty, besides checking its nullity, optimizing the API calls. Also, cleaned up the `Result` DTO by removing various unused fields.