@@ -54,10 +54,10 @@ public class OpenCDXApiFDAImpl implements OpenCDXApiFDA {
     public List<OpenCDXMedicationModel> getMedicationsByBrandName(String brandNamePrefix) {
         ResponseEntity<Search> drugs;
         try {
-            if(this.openFDAApiKey != null) {
-                drugs = this.openCDXOpenFDAClient.getDrugs("products.brand_name:\"" + brandNamePrefix + "\"", 1000, 0);
-            } else {
+            if(this.openFDAApiKey != null && !this.openFDAApiKey.isEmpty()) {
                 drugs = this.openCDXOpenFDAClient.getDrugs(openFDAApiKey,"products.brand_name:\"" + brandNamePrefix + "\"", 1000, 0);
+            } else {
+                drugs = this.openCDXOpenFDAClient.getDrugs("products.brand_name:\"" + brandNamePrefix + "\"", 1000, 0);
             }
         } catch (FeignException e) {
             log.warn("Failed fetching drugs for brand name: {}", brandNamePrefix);
@@ -75,25 +75,31 @@ public class OpenCDXApiFDAImpl implements OpenCDXApiFDA {
                         if(result.getOpenfda() != null && result.getOpenfda().getProduct_ndc() != null) {
                             ResponseEntity<Search> label;
 
-                            if (this.openFDAApiKey != null) {
-                                label = this.openCDXOpenFDAClient.getLabel(
-                                        "openfda.product_ndc:\"" + result.getOpenfda().getProduct_ndc() + "\"", 1000, 0);
-                            } else {
+                            log.info("Fetching label for Product NDC: {}", result.getOpenfda().getProduct_ndc().getFirst());
+                            if(this.openFDAApiKey != null && !this.openFDAApiKey.isEmpty()) {
+                                log.info("Using OpenFDA API Key");
                                 label = this.openCDXOpenFDAClient.getLabel(openFDAApiKey,
-                                        "openfda.product_ndc:\"" + result.getOpenfda().getProduct_ndc() + "\"", 1000, 0);
+                                        "openfda.product_ndc:\"" + result.getOpenfda().getProduct_ndc().getFirst() + "\"", 1000, 0);
+                            } else {
+                                log.info("Not using OpenFDA API Key");
+                                label = this.openCDXOpenFDAClient.getLabel(
+                                        "openfda.product_ndc:\"" + result.getOpenfda().getProduct_ndc().getFirst() + "\"", 1000, 0);
                             }
 
                             if (label.getBody() != null
                                     && label.getBody().getResults() != null
                                     && !label.getBody().getResults().isEmpty()) {
-                                Result drug = label.getBody().getResults().get(0);
+                                Result drug = label.getBody().getResults().getFirst();
                                 drug.setProducts(result.getProducts());
-
+                                log.info("Found Label for Product NDC: {}", result.getOpenfda().getProduct_ndc().getFirst());
                                 return drug;
+                            } else {
+                                log.warn("Label: {}",label.getBody() );
                             }
                         }
                     } catch (FeignException e) {
-                        log.warn("Failed fetching label for application number: {}", result.getApplication_number());
+                        log.error("FeignException: ", e);
+                        log.warn("Failed fetching label for Product NDC: {}", result.getOpenfda().getProduct_ndc().getFirst());
                     }
 
                     return result;
